# nba-ai-assistant-rag-sql

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: mistral_client.py  prompts.py  router.py  ui_streamlit.py
data/: nba.db  test_questions.json
data/Apres_sqltool/: generation_contexts.csv  ragas_results.csv  ragas_results_metier.csv
data/Avant_sqltool/: generation_contexts.csv  ragas_results.csv  ragas_results_metier.csv
evaluation/: evaluation_metier.py  evaluation_ragas.py  interface_eval.py  mistral_ragas_embeddings.py
notebooks/: eval_results.ipynb  nl_2_sql.ipynb
src/: indexer.py  prompt_builder.py  rag_engine.py  sql_tool.py  validation_pydantic.py
utils/: config.py  create_db.py  vector_store.py
vector_db/: document_chunks.pkl  faiss_index.idx
